# warap-ai

./: .dockerignore  .env.example  .replit  Dockerfile  README-DOCKER.md  README-WINDOWS.md  alembic.ini  api_cleanup_summary.md  api_implementation_plan.md  api_test_results.json  api_test_results_20250711_165044.json  cleaned_api_structure.md  clear_phone_test.html  communication_error_handling_summary.md  config.py  create_human_escalation_tables.py  create_permissions_and_superadmin.py  create_request_management_tables.py  demo_sprint3_system.py  deploy.bat  deploy.ps1  deploy.sh  djobea_ai_clean_swagger.json  djobea_ai_openapi_spec.json  docker-compose.yml  final_dialog_test.py  final_system_test.py  main.py  models.py  multi_llm_system_summary.md  multi_llm_test_results.json  provider_notification_system_status.md  pyproject.toml  replit.md  run.py  system_architecture_diagram.md  test_action_code_system.py  test_analytics_endpoints.py  test_analytics_insights.py  test_analytics_kpis.py  (+25 more)
alembic/: env.py
app/: __init__.py  config.py  database.py  main.py  main_clean.py
attached_assets/: Pasted--Cahier-des-Charges-Syst-me-de-Communication-Agent-LLM-Djobea-AI-1-OBJECTIF-PRINCIPAL-D-1752054430616_1752054430617.txt  Pasted--Djobea-AI-Beautiful-Landing-Page-Implementation-Prompt-IMPLEMENTATION-TASK-Crea-1751392507851_1751392507852.txt  Pasted--Documentation-API-Settings-Djobea-Analytics-Vue-d-ensemble-Cette-documentation-couvre-t-1752283576277_1752283576279.txt  Pasted--SYST-ME-Session-cr-e-sess-001-tat-INITIAL--1752069204528_1752069204528.txt  (+35 more)
docs/: README.md
(+303 files in other folders)
