[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.2",
    "anthropic>=0.55.0",
    "fastapi>=0.115.14",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.41",
    "twilio>=9.6.3",
    "uvicorn>=0.35.0",
]
