[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.2",
    "anthropic>=0.55.0",
    "bcrypt>=4.3.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.14",
    "flask-dance>=7.1.0",
    "flask-login>=0.6.3",
    "geopy>=2.4.1",
    "google-genai>=1.24.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "oauthlib>=3.3.1",
    "openai>=1.93.0",
    "passlib>=1.7.4",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "pytz>=2025.2",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.41",
    "twilio>=9.6.3",
    "unidecode>=1.4.0",
    "uvicorn>=0.35.0",
]
